added 12 col grid to licence details page

--- a/server/views/licenceDetails/OM.pug
+++ b/server/views/licenceDetails/OM.pug
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../layout-grid
 
 block content
 
@@ -7,8 +7,8 @@ block content
     else
         h1.heading-large Licence details
 
-    div.grid-row.largeMarginBottom
-        div.column-full
+    div.pure-g.largeMarginBottom
+        div.pure-u-1
             if licence.additionalConditions && licence.additionalConditions.length > 0
                 include ./additionalConditions
 
@@ -19,8 +19,9 @@ block content
                 include ./reportingInstructions
 
 
-    div#continueBtns.inlineButtons
-        if status === 'STARTED'
-            a#continueBtn.requiredButton.button(href="/send/"+licence.nomisId role="button") Continue
+    div#continueBtns.pure-g.paddingBottom
+        div.pure-u-1.inlineButtons
+            if status === 'STARTED'
+                a#continueBtn.requiredButton.button(href="/send/"+licence.nomisId role="button") Continue
 
-        a#backBtn.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
+            a#backBtn.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
