--- a/server/views/licenceDetails/additionalConditions.pug
+++ b/server/views/licenceDetails/additionalConditions.pug
@@ -1,6 +1,6 @@
 h2.heading-medium.borderBottom Additional conditions
-div.grid-row
-    div.column-two-thirds
+div.pure-g
+    div.pure-u-2-3
         div.borderBottomLight
             h3.heading-small Conditions
                 for condition in licence.additionalConditions
@@ -21,3 +21,4 @@ div.grid-row
     //        p
     //            | To surrender your passport(s) to your supervising officer and to notify your
     //            | supervising officer of any intention to apply for a new passport.
+
