12 colum sent screen

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -215,9 +215,9 @@ a.button.button-secondary {
 .confirm-banner {
     color: $white;
     background-color: $govuk-blue;
-    padding: 15px;
+    padding: 1px 15px 15px;
     text-align: center;
-    margin-bottom: 15px;
+    margin: 60px 0 30px 0;
 }
 
 td.spacer {
