--- a/server/views/sent/OMU.pug
+++ b/server/views/sent/OMU.pug
@@ -2,8 +2,9 @@ extends ../layout
 
 block content
 
-    div.column-two-thirds
-        div.confirm-banner
-            div.heading-large Sent for approval
+    div.pure-g
+        div.pure-u-2-3
+            div.confirm-banner
+                div.heading-large.paddingBottom Sent for approval
 
-        a#backBtn.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
+        a#backBtn.requiredButton.button.button-secondary.largeMarginBottom(href="/" role="button") Back to dashboard
