--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -1,14 +1,16 @@
-extends layout.pug
+extends layout-grid.pug
 
 block content
-    form(action='/login', method='POST', class='form')
-        input(type="hidden" name="_csrf" value=csrfToken)
-        h1(class='form-title heading-large') Sign in
-        .form-group
-            label.form-label(for='username') Username
-            input#username.form-control(name='username', type='text', data-element-id='username')
-        .form-group
-            label.form-label(for='password') Password
-            input#password.form-control(name='password', type='password', data-element-id='password')
+    div.pure-g
+        div.pure-u-1-3
+            form(action='/login', method='POST', class='form')
+                input(type="hidden" name="_csrf" value=csrfToken)
+                h1(class='form-title heading-large') Sign in
+                .form-group
+                    label.form-label(for='username') Username
+                    input#username.form-control(name='username', type='text', data-element-id='username')
+                .form-group
+                    label.form-label(for='password') Password
+                    input#password.form-control(name='password', type='password', data-element-id='password')
 
-        button#submit.button(type='submit', role='button', data-element-id="continue-button") Login
+                button#submit.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Login
