updated rest of the pages to use new grid

--- a/server/views/additionalConditions/standard.pug
+++ b/server/views/additionalConditions/standard.pug
@@ -6,8 +6,8 @@ block content
 
     h1.heading-large The standard conditions
 
-    div.grid-row.paddingBottom
-        div.column-two-thirds
+    div.pure-g.paddingBottom
+        div.pure-u-2-3
             P The following conditions are included on the licence as a baseline.
 
             p An offender must:
@@ -16,4 +16,4 @@ block content
                 for condition in conditions
                     li.midPaddingBottom #{condition.TEXT.value}
 
-    a.button.button-secondary(href="/additionalConditions/"+nomisId role="button") Back to dashboard
+    a.button.button-secondary.largeMarginBottom(href="/additionalConditions/"+nomisId role="button") Back to dashboard
