--- a/server/views/error.pug
+++ b/server/views/error.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
 
-    div.grid-row
-        div.column-one-half
+    div.pure-g
+        div.pure-u-1-2
             h1.heading-xlarge Error
             h1.heading-large There was an error
 
