--- a/server/views/feedback.pug
+++ b/server/views/feedback.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
 
-    div.grid-row
-        div.column-two-thirds
+    div.pure-g
+        div.pure-u-2-3
             h1.heading-xlarge Feedback
 
             span Please email
@@ -12,6 +12,6 @@ block content
             =" "
             | with any queries or feedback
 
-        div.column-two-thirds
+        div.pure-u-2-3
             div.back-link-container
                 a.link-back(href= returnURL) Back
