--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-    div.grid-row
-        div.column-one-half
+    div.pure-g
+        div.pure-u-1-2
             h1.heading-xlarge Licences Application
 
             a(href="/dashboard") Dashboard
