--- a/server/views/notfound.pug
+++ b/server/views/notfound.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
 
-    div.grid-row
-        div.column-one-half
+    div.pure-g
+        div.pure-u-1-2
             h1.heading-xlarge Page not found
 
             p
