--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -25,8 +25,8 @@ html(lang="en")
         link(href="/public/stylesheets/application.css?"+version, media="screen", rel="stylesheet", type="text/css")
         <!--<![endif]-->
         <!--[if lt IE 9]>
-        link(href="/public/stylesheets/grid-old-ie.css?"+version, media="screen", rel="stylesheet", type="text/css")
-        link(href="/stylesheets/application-oldie.css?"+version, media="screen", rel="stylesheet", type="text/css")
+        link(href="/public/stylesheets/grid-old-ie.css", media="screen", rel="stylesheet", type="text/css")
+        link(href="/stylesheets/application-oldie.css", media="screen", rel="stylesheet", type="text/css")
         <![endif]-->
     body
         script.
