prepopulate additional conditions form if submission already exists in the database

--- a/server/views/additionalConditions/formItems/courseOrCentre.pug
+++ b/server/views/additionalConditions/formItems/courseOrCentre.pug
@@ -1,3 +1,5 @@
 label(for='courseOrCentre') Name of course/centre
 textarea(name='courseOrCentre' id='courseOrCentre' class='form-control' rows='2')
+    if condition.USER_SUBMISSION && condition.USER_SUBMISSION.courseOrCentre
+        | #{condition.USER_SUBMISSION.courseOrCentre}
 
