--- a/server/views/additionalConditions/formItems/alcoholLimit.pug
+++ b/server/views/additionalConditions/formItems/alcoholLimit.pug
@@ -1,2 +1,2 @@
 label(for='alcoholLimit') Limit
-input(type='text' name='alcoholLimit' id='alcoholLimit' class='form-control')
+input(type='text' name='alcoholLimit' id='alcoholLimit' class='form-control' value=condition.USER_SUBMISSION && condition.USER_SUBMISSION.alcoholLimit)
