--- a/server/views/additionalConditions/formItems/noContactOffenders.pug
+++ b/server/views/additionalConditions/formItems/noContactOffenders.pug
@@ -1,3 +1,5 @@
 label(for='noContactOffenders') Names of offenders/individuals
 textarea(name='noContactOffenders' id='noContactOffenders' class='form-control' rows='4')
+    if condition.USER_SUBMISSION && condition.USER_SUBMISSION.noContactOffenders
+        |#{condition.USER_SUBMISSION.noContactOffenders}
 
