--- a/server/views/additionalConditions/formItems/noCurrencyQuantity.pug
+++ b/server/views/additionalConditions/formItems/noCurrencyQuantity.pug
@@ -1,3 +1,3 @@
 div.inlineFormItem
     label(for='cashQuantity') Quantity
-    input(type='number' name='cashQuantity' id='cashQuantity' class='form-control')
+    input(type='number' name='cashQuantity' id='cashQuantity' class='form-control' value=condition.USER_SUBMISSION && condition.USER_SUBMISSION.cashQuantity)
