--- a/server/views/additionalConditions/formItems/noSpecificItems.pug
+++ b/server/views/additionalConditions/formItems/noSpecificItems.pug
@@ -1,3 +1,4 @@
 label(for='noSpecificItems') Items
 textarea(name='noSpecificItems' id='noSpecificItems' class='form-control' rows='2')
-
+    if condition.USER_SUBMISSION && condition.USER_SUBMISSION.noSpecificItems
+        | #{condition.USER_SUBMISSION.noSpecificItems}
