--- a/server/views/additionalConditions/formItems/noUnsupervisedContact.pug
+++ b/server/views/additionalConditions/formItems/noUnsupervisedContact.pug
@@ -1,21 +1,21 @@
 div.pure-g
     div.pure-u-1.inline
         div.multiple-choice
-            input(id='unsupervisedContactAny' type='radio' name='unsupervisedContactGender' value='any')
+            input(id='unsupervisedContactAny' type='radio' name='unsupervisedContactGender' value='any' checked=condition.USER_SUBMISSION && condition.USER_SUBMISSION.unsupervisedContactGender === 'any')
             label(for='unsupervisedContactAny') Any
 
         div.multiple-choice
-            input(id='unsupervisedContactFemale' type='radio' name='unsupervisedContactGender' value='any female')
+            input(id='unsupervisedContactFemale' type='radio' name='unsupervisedContactGender' value='any female' checked=condition.USER_SUBMISSION && condition.USER_SUBMISSION.unsupervisedContactGender === 'any female')
             label(for='unsupervisedContactFemale') Any female
 
         div.multiple-choice
-            input(id='unsupervisedContactMale' type='radio' name='unsupervisedContactGender' value='any male')
+            input(id='unsupervisedContactMale' type='radio' name='unsupervisedContactGender' value='any male' checked=condition.USER_SUBMISSION && condition.USER_SUBMISSION.unsupervisedContactGender === 'any male')
             label(for='unsupervisedContactMale') Any male
 
 div.inlineFormItem
     label(for='unsupervisedContactAge') Age
-    input(type='number' name='unsupervisedContactAge' id='unsupervisedContactAge' class='form-control')
+    input(type='number' name='unsupervisedContactAge' id='unsupervisedContactAge' class='form-control' value=condition.USER_SUBMISSION && condition.USER_SUBMISSION.unsupervisedContactAge)
 
 div
     label(for='unsupervisedContactSocial') Name of social services dept.
-    input(type='text' name='unsupervisedContactSocial' id='unsupervisedContactSocial' class='form-control')
+    input(type='text' name='unsupervisedContactSocial' id='unsupervisedContactSocial' class='form-control' value=condition.USER_SUBMISSION && condition.USER_SUBMISSION.unsupervisedContactSocial)
