--- a/server/views/additionalConditions/formItems/notInSightOf.pug
+++ b/server/views/additionalConditions/formItems/notInSightOf.pug
@@ -1,2 +1,4 @@
 label(for='notInSightOf') Restricted places
 textarea(name='notInSightOf' id='notInSightOf' class='form-control' rows='2')
+    if condition.USER_SUBMISSION && condition.USER_SUBMISSION.notInSightOf
+        | #{condition.USER_SUBMISSION.notInSightOf}
