--- a/server/views/additionalConditions/formItems/vehicleDetails.pug
+++ b/server/views/additionalConditions/formItems/vehicleDetails.pug
@@ -1,3 +1,4 @@
 label(for='vehicleDetails') Vehicle details
 textarea(name='vehicleDetails' id='vehicleDetails' class='form-control' rows='2')
-
+    if condition.USER_SUBMISSION && condition.USER_SUBMISSION.vehicleDetails
+        | #{condition.USER_SUBMISSION.vehicleDetails}
