--- a/server/views/reportingInstructions/index.pug
+++ b/server/views/reportingInstructions/index.pug
@@ -10,37 +10,37 @@ block content
             div.pure-u-1.pure-u-md-4-12
                 div.form-group
                     label.form-label(for="name") Name of person
-                    input#name.form-control(name="name" type="text")
+                    input#name.form-control(name="name" type="text" value=reportingInstructions && reportingInstructions.name)
 
                 div.form-group
                     label.form-label(for="building") Building and street
-                    input#building.midMarginBottom.form-control(name="address1" type="text")
-                    input#street.form-control.block(name="address2" type="text")
+                    input#building.midMarginBottom.form-control(name="address1" type="text" value=reportingInstructions && reportingInstructions.address1)
+                    input#street.form-control.block(name="address2" type="text" value=reportingInstructions && reportingInstructions.address2)
 
                 div.form-group
                     label.form-label(for="town") Town or city
-                    input#town.form-control(name="address3" type="text")
+                    input#town.form-control(name="address3" type="text" value=reportingInstructions && reportingInstructions.address3)
 
                 div.form-group.pure-u-md-7-12
                     label.form-label(for="postcode") Postcode
-                    input#postcode.form-control.small(name="postCode" type="text")
+                    input#postcode.form-control.small(name="postCode" type="text" value=reportingInstructions && reportingInstructions.postCode)
 
                 div.form-group.pure-u-md-7-12
                     label.form-label(for="telephone") Telephone
-                    input#telephone.form-control.small(name="telephone" type="text")
+                    input#telephone.form-control.small(name="telephone" type="text" value=reportingInstructions && reportingInstructions.telephone)
         div#dateTime.pure-g.paddingBottom
             div.pure-u-md-1-6
                 div.pure-u-1.form-group
                     label.form-label(for="date") Date
-                    input#date.form-control.small(name="date" type="text")
+                    input#date.form-control.small(name="date" type="text" value=reportingInstructions && reportingInstructions.date)
 
                 div.pure-u-1.pure-g.inline.form-group.inline
                     div.pure-u-1-2.padRight7
                         label(for='hour') Hour
-                        input(type='text' name='hour' id='hour' class='form-control')
+                        input(type='text' name='hour' id='hour' class='form-control' value=reportingInstructions && reportingInstructions.hour)
                     div.pure-u-1-2.padLeft7
                         label(for='minute') Minute
-                        input(type='text' name='minute' id='minute' class='form-control')
+                        input(type='text' name='minute' id='minute' class='form-control' value=reportingInstructions && reportingInstructions.minute)
 
         div#continueBtns.pure-g.paddingBottom
             div.pure-u-1.inlineButtons
