--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -20,6 +20,7 @@ html(lang="en")
         link(rel="apple-touch-icon-precomposed", sizes="120x120", href="/public/images/apple-touch-icon-120x120.png?0.19.2")
         link(rel="apple-touch-icon-precomposed", sizes="76x76", href="/public/images/apple-touch-icon-76x76.png?0.19.2")
         link(rel="apple-touch-icon-precomposed", sizes="76x76", href="/public/images/apple-touch-icon-60x60.png?0.19.2")
+        link(href="/public/stylesheets/datepicker.css", media="screen", rel="stylesheet", type="text/css")
         <!--[if gt IE 8]><!-->
         link(href="/public/stylesheets/grid.css?"+version, media="screen", rel="stylesheet", type="text/css")
         link(href="/public/stylesheets/application.css?"+version, media="screen", rel="stylesheet", type="text/css")
